SET(SOURCES ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_885539969.c
    ui_img_1537598557.c
    ui_img_923627907.c
    ui_img_1143977843.c
    fonts/ui_font_big.c
    fonts/ui_font_m2.c
    fonts/ui_font_mid.c
    fonts/ui_font_small.c
    fonts/ui_font_MINI.c
    fonts/ui_font_M3.c)

add_library(ui ${SOURCES})
